fix spacing and add link to book cover

--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@
   flex-flow: column;
   align-items: center;
   justify-content: space-between;
+  word-spacing: 3px;
 }
 
 .about h1 {
